// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TEST Users 1 1`] = `
Array [
  <div
    data-testid="user-item"
  >
    Leanne Graham
  </div>,
  <div
    data-testid="user-item"
  >
    Ervin Howell
  </div>,
  <div
    data-testid="user-item"
  >
    Clementine Bauch
  </div>,
]
`;

exports[`Users test 1 1`] = `
Array [
  <div
    data-testid="user-item"
  >
    Leanne Graham
  </div>,
  <div
    data-testid="user-item"
  >
    Ervin Howell
  </div>,
  <div
    data-testid="user-item"
  >
    Clementine Bauch
  </div>,
]
`;

exports[`Users test renders learn react link 1`] = `
Array [
  <a
    data-testid="user-item"
    href="/users/1"
  >
    Leanne Graham
  </a>,
  <a
    data-testid="user-item"
    href="/users/2"
  >
    Ervin Howell
  </a>,
  <a
    data-testid="user-item"
    href="/users/3"
  >
    Clementine Bauch
  </a>,
]
`;
